examples/test/testpolicy6708.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6708
  namespace: namespace22
spec:
  podSelector:
    matchLabels:
      key39: value16
      key45: value44
      key6: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value0
          key16: value7
      podSelector:
        matchLabels:
          key28: value36
          key21: value35
          key33: value29
